# now-cmd

./: Cargo.toml  README.md
src/: formatter.rs  main.rs
